kubernetes/istio/just-header-match-traffic/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example-server-ingress
spec:
  hosts:
  - "example-ingress.com"
  gateways:
  - example-gateway
  http:
  - match:
      - headers:
          x-circle-id:
            exact: "teste"
        uri:
          prefix: /server
    rewrite:
      uri: "/"  
    route:
    - destination:
        host: istio-server-example
